fixed text width, opacity error and slight alignment issue with trans background

--- a/src/operun/frontpage/browser/static/frontpage-compiled.css
+++ b/src/operun/frontpage/browser/static/frontpage-compiled.css
@@ -16,11 +16,11 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 }
 .teaser-text {
   position: absolute;
-  bottom: 0;
-  width: 100%;
+  bottom: 1px;
+  width: 20%;
   padding: 20px;
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5) !important;
 }
 .teaser-title h2 {
   margin-top: 0;
@@ -37,7 +37,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   margin-bottom: 30px;
 }
 .frontpage-news {
-  margin: 0 -15px 0 -15px;
+  margin: 0 -15px;
 }
 .news-wrapper {
   height: auto;
@@ -66,6 +66,6 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   height: auto;
 }
 .row {
-  padding: 0 15px 0 15px;
+  padding: 0 15px;
 }
 /*# sourceMappingURL=frontpage-compiled.css.map */
