--- a/src/operun/frontpage/browser/static/frontpage.less
+++ b/src/operun/frontpage/browser/static/frontpage.less
@@ -22,11 +22,11 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 
 .teaser-text {
   position: absolute;
-  bottom: 0;
-  width: 100%;
+  bottom: 1px;
+  width: 20%;
   padding: 20px;
   color: #fff;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .5) !important;
 }
 
 .teaser-title h2 {
@@ -49,7 +49,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 }
 
 .frontpage-news {
-  margin: 0 -15px 0 -15px;
+  margin: 0 -15px;
 }
 
 .news-wrapper {
@@ -87,5 +87,5 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 }
 
 .row {
-  padding: 0 15px 0 15px;
+  padding: 0 15px;
 }
